--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
     </div>
 </section>
 <div>
-    <a href="#">
-        <p>
-            системой, глубоко понимающей ваш код, поддерживает PHP 7.2,7.1,7.0, 5.6, 5.5, 5.4 и 5.3
-            помогает следить за правильностью кода
-        </p>
-    </a>
+    <a href="#">sosi pisos</a>
 </div>
 </body>
 </html>
