--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </section>
 <div>
-    <a href="#">sosi pisos</a>
+    <a href="#" class="bogdan">sosi pisos</a>
 </div>
 </body>
 </html>
