--- a/index.html
+++ b/index.html
@@ -20,26 +20,39 @@
                     <img src="img/logo.png" alt="CloudBudget">
                 </a>
                 <ul class="menu">
-                    <li><a href="#">Обзор</a></li>
-                    <li><a href="#">Особливості</a></li>
-                    <li><a href="#">Технологія</a></li>
-                    <li><a href="#">Контакти</a></li>
-                    <li><a href="#">Ввійти</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Обзор</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Особливості</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Технологія</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Контакти</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Ввійти</a></li>
                 </ul>
-                <a href="#" class="transparent-btn">Вхід</a>
+                <a class="transparent-btn" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Вхід</a>
             </div>
             <div class="header-content">
                 <h1 class="header-content__h1">CloudBudget</h1>
                 <h2 class="header-content__h2">Управление бюджетом в для всех.<br>
                     Всего 69,95 € в месяц после 7-дневной<br>
                     пробной версии за 4,99 €</h2>
-                <a class="header-content__btn" href="#">Спробувати</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="header-content__btn">Спробувати</a>
             </div>
         </header>
     </div>
 </section>
-<div>
-    <a href="#" class="bogdan">sosi pisos</a>
-</div>
+<section class="about-wrap">
+    <div class="about-block wrap">
+        <div class="about-block-left">
+            <h1 class="about__h1">Простое приложение для управления бюджетом</h1>
+            <h3 class="about__h2">Наше приложение создано, чтобы вы могли в реальном времени управлять своим бюджетом и
+                расходами в режиме
+                онлайн с любого устройства. Оно предоставляет подробные отчеты о доходах и расходах с графиками, чтобы
+                вы сразу могли увидеть расходы и бюджет. Читайте ниже, чтобы узнать больше.</h3>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="about__btn">Узнать
+                подробнее</a>
+        </div>
+        <div class="about-block-right">
+            <img src="img/about.png" alt="Простое приложение для управления бюджетом" title="img" class="about_img">
+        </div>
+    </div>
+</section>
 </body>
 </html>
