--- a/index.html
+++ b/index.html
@@ -20,38 +20,119 @@
                     <img src="img/logo.png" alt="CloudBudget">
                 </a>
                 <ul class="menu">
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Обзор</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Особливості</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Технологія</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Контакти</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Ввійти</a></li>
+                    <li><a href="#">Обзор</a>
+                    </li>
+                    <li><a href="#">Особливості</a>
+                    </li>
+                    <li><a href="#">Технологія</a>
+                    </li>
+                    <li><a href="#">Контакти</a>
+                    </li>
+                    <li><a href="#">Ввійти</a>
+                    </li>
                 </ul>
-                <a class="transparent-btn" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Вхід</a>
+                <a class="transparent-btn" href="#">Вхід</a>
             </div>
             <div class="header-content">
                 <h1 class="header-content__h1">CloudBudget</h1>
                 <h2 class="header-content__h2">Управление бюджетом в для всех.<br>
                     Всего 69,95 € в месяц после 7-дневной<br>
                     пробной версии за 4,99 €</h2>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="header-content__btn">Спробувати</a>
+                <a href="#" class="header-content__btn">Спробувати</a>
             </div>
         </header>
     </div>
 </section>
 <section class="about-wrap">
     <div class="about-block wrap">
-        <div class="about-block-left">
+        <div class=" about-block-left">
             <h1 class="about__h1">Простое приложение для управления бюджетом</h1>
             <h3 class="about__h2">Наше приложение создано, чтобы вы могли в реальном времени управлять своим бюджетом и
                 расходами в режиме
                 онлайн с любого устройства. Оно предоставляет подробные отчеты о доходах и расходах с графиками, чтобы
                 вы сразу могли увидеть расходы и бюджет. Читайте ниже, чтобы узнать больше.</h3>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="about__btn">Узнать
-                подробнее</a>
+            <a href="#" class="about__btn">Узнать подробнее</a>
         </div>
         <div class="about-block-right">
-            <img src="img/about.png" alt="Простое приложение для управления бюджетом" title="img" class="about_img">
+            <img class="about_img" src="img/about.png" alt="Простое приложение для управления бюджетом" title="img">
         </div>
+    </div>
+</section>
+<section class="posibilities-wrap">
+    <h2 class="posibilities__h2">Возможности</h2>
+    <div class="posibilities-block wrap">
+        <article class="posibilities__main">
+            <img src="img/Bg.png" alt="Возможности">
+            <div class="posibilities__text">
+                <h3 class="posibilities__text__h3">Поддерживает все валюты и карты</h3>
+                <p class="posibilities__text__p">Мы поддерживаем все популярные валюты и полностью настраиваем, чтобы
+                    добавить</p>
+                <a href="#">Подробнее</a>
+            </div>
+        </article>
+        <article class="posibilities__main">
+            <img src="img/Bg1.png" alt="Возможности">
+            <div class="posibilities__text">
+                <h3 class="posibilities__text__h3">Управляйте своими расходами на ходу</h3>
+                <p class="posibilities__text__p">Вы можете получить доступ к своей учетной записи из любой точки мира на
+                    любом устройстве</p>
+                <a href="#">Подробнее</a>
+            </div>
+        </article>
+        <article class="posibilities__main">
+            <img src="img/Bg2.png" alt="Возможности">
+            <div class="posibilities__text">
+                <h3 class="posibilities__text__h3">Управление бюджетом осуществляется в облаке</h3>
+                <p class="posibilities__text__p">Наше приложение создано для того, чтобы вы могли управлять управлять
+                    своим бюджетом. </p>
+                <a href="#">Подробнее</a>
+            </div>
+        </article>
+    </div>
+</section>
+<section class="technology-wrap">
+    <h2 class="technology__h2">Технологии</h2>
+    <div class="technology__block wrap">
+        <article class="technology__main">
+            <header class="technology__content">
+                01
+                <img class="technology__content__img technology__img01" src="img/main1.png" alt="Облачное хранение">
+            </header>
+            <div class="technology__content__text">
+            <h3 class="technology__content__h3">Облачное хранение</h3>
+            <p class="technology__content__p">Доступ из любой точки мира с любого устройства</p>
+            </div>
+        </article>
+        <article class="technology__main">
+            <header class="technology__content">
+                02
+                <img class="technology__content__img technology__img02" src="img/main2.png" alt="Безопастность">
+            </header>
+            <div class="technology__content__text">
+            <h3 class="technology__content__h3">Безопастность</h3>
+            <p class="technology__content__p">Вся информация хранится на защищенных облачных серверах</p>
+            </div>
+        </article>
+        <article class="technology__main">
+            <header class="technology__content">
+                03
+                <img class="technology__content__img technology__img03" src="img/main3.png" alt="PDF Отчеты">
+            </header>
+            <div class="technology__content__text">
+            <h3 class="technology__content__h3">PDF Отчеты</h3>
+            <p class="technology__content__p">Скачивайте ваши отчеты в удобном формате PDF</p>
+            </div>
+        </article>
+        <article class="technology__main">
+            <header class="technology__content">
+                04
+                <img class="technology__content__img technology__img04" src="img/main4.png" alt="CSV Отчеты">
+            </header>
+            <div class="technology__content__text">
+            <h3 class="technology__content__h3">CSV Отчеты</h3>
+            <p class="technology__content__p">Скачивайте ваши отчеты в удобном формате CSV</p>
+            </div>
+        </article>
     </div>
 </section>
 </body>
